--- a/AAAReclamsO/Base.lproj/Main.storyboard
+++ b/AAAReclamsO/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -187,17 +188,20 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tlq-bV-F4K" userLabel="topBar">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hn9-nY-wld">
-                                        <rect key="frame" x="5" y="5" width="50" height="30"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rSY-f6-STB">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.33000000000000002" colorSpace="calibratedWhite"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hn9-nY-wld">
+                                        <rect key="frame" x="290" y="0.0" width="30" height="30"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="9d1-0P-Mdx"/>
-                                            <constraint firstAttribute="height" constant="30" id="hT6-xe-Idt"/>
+                                            <constraint firstAttribute="width" secondItem="Hn9-nY-wld" secondAttribute="height" multiplier="1:1" id="nkV-jn-cvV"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                        <state key="normal" image="close_btn_nobg.png">
+                                        <state key="normal" image="minimize_btn.png">
                                             <color key="titleColor" red="0.03529411927" green="0.1176470667" blue="0.1647058874" alpha="1" colorSpace="deviceRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -206,14 +210,14 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Neq-bN-oEZ" userLabel="Progress view">
-                                        <rect key="frame" x="120" y="0.0" width="80" height="40"/>
+                                        <rect key="frame" x="120" y="0.0" width="80" height="30"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zz1-wv-Yk5">
-                                                <rect key="frame" x="0.0" y="0.0" width="80" height="40"/>
+                                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zz1-wv-Yk5">
+                                                <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.33000000000000002" colorSpace="calibratedWhite"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CwN-co-slu">
-                                                <rect key="frame" x="0.0" y="0.0" width="80" height="40"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -224,17 +228,17 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="vqd-2U-67k"/>
-                                            <constraint firstAttribute="height" constant="40" id="yru-zk-AzR"/>
+                                            <constraint firstAttribute="height" constant="30" id="yru-zk-AzR"/>
                                         </constraints>
                                     </view>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HaF-Yh-gvh" userLabel="Favorite view">
-                                        <rect key="frame" x="255" y="5" width="50" height="30"/>
+                                        <rect key="frame" x="255" y="0.0" width="50" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OzR-Nh-E6g">
-                                                <rect key="frame" x="5" y="5" width="40" height="40"/>
+                                                <rect key="frame" x="5" y="0.0" width="40" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="Idl-bw-nyw"/>
-                                                    <constraint firstAttribute="height" constant="40" id="wSa-kS-xib"/>
+                                                    <constraint firstAttribute="height" constant="30" id="wSa-kS-xib"/>
                                                 </constraints>
                                                 <state key="normal" backgroundImage="favorite_empty.png">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -249,7 +253,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="BW4-RL-L3E"/>
                                             <constraint firstAttribute="width" constant="50" id="Sjo-IK-RFh"/>
-                                            <constraint firstAttribute="centerY" secondItem="OzR-Nh-E6g" secondAttribute="centerY" constant="-10" id="chl-N1-Dpc"/>
+                                            <constraint firstAttribute="centerY" secondItem="OzR-Nh-E6g" secondAttribute="centerY" id="chl-N1-Dpc"/>
                                             <constraint firstAttribute="centerX" secondItem="OzR-Nh-E6g" secondAttribute="centerX" id="eJY-Gf-9I1"/>
                                         </constraints>
                                     </view>
@@ -257,13 +261,14 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="centerY" secondItem="Neq-bN-oEZ" secondAttribute="centerY" id="7DM-7V-7Ei"/>
-                                    <constraint firstItem="HaF-Yh-gvh" firstAttribute="top" secondItem="Tlq-bV-F4K" secondAttribute="top" constant="5" id="TJC-VJ-1x5"/>
-                                    <constraint firstAttribute="bottom" secondItem="HaF-Yh-gvh" secondAttribute="bottom" constant="5" id="cDu-aq-CxU"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hn9-nY-wld" secondAttribute="trailing" id="Bmn-ji-Cez"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hn9-nY-wld" secondAttribute="bottom" id="QCi-sT-H5R"/>
+                                    <constraint firstItem="HaF-Yh-gvh" firstAttribute="top" secondItem="Tlq-bV-F4K" secondAttribute="top" id="TJC-VJ-1x5"/>
+                                    <constraint firstItem="Hn9-nY-wld" firstAttribute="top" secondItem="Tlq-bV-F4K" secondAttribute="top" id="Vhw-eb-dOi"/>
+                                    <constraint firstAttribute="bottom" secondItem="HaF-Yh-gvh" secondAttribute="bottom" id="cDu-aq-CxU"/>
                                     <constraint firstAttribute="centerX" secondItem="Neq-bN-oEZ" secondAttribute="centerX" id="ecF-PK-vic"/>
                                     <constraint firstAttribute="trailing" secondItem="HaF-Yh-gvh" secondAttribute="trailing" constant="15" id="ga0-cy-MCe"/>
-                                    <constraint firstAttribute="height" constant="40" id="gdp-35-edw"/>
-                                    <constraint firstItem="Hn9-nY-wld" firstAttribute="top" secondItem="Tlq-bV-F4K" secondAttribute="top" constant="5" id="o0s-n9-B6D"/>
-                                    <constraint firstItem="Hn9-nY-wld" firstAttribute="leading" secondItem="Tlq-bV-F4K" secondAttribute="leading" constant="5" id="q3y-Wg-33C"/>
+                                    <constraint firstAttribute="height" constant="30" id="gdp-35-edw"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T3b-25-tZs" userLabel="spinner view">
@@ -312,6 +317,7 @@
                         <outlet property="gadBannerViewContainer" destination="qcP-3i-5Ko" id="GhJ-FM-VQP"/>
                         <outlet property="progressLabel" destination="CwN-co-slu" id="3mn-mm-J2G"/>
                         <outlet property="progressView" destination="Neq-bN-oEZ" id="Szk-Im-Hk8"/>
+                        <outlet property="progressViewBgImage" destination="Zz1-wv-Yk5" id="sl5-4w-QVL"/>
                         <outlet property="spinnerView" destination="T3b-25-tZs" id="rUa-lM-uGY"/>
                         <outlet property="topBarTopConstraint" destination="yjs-h1-xB7" id="FV1-s2-8ag"/>
                         <outlet property="topBarView" destination="Tlq-bV-F4K" id="fdd-4y-UXB"/>
@@ -448,10 +454,10 @@
         <image name="bg.png" width="320" height="568"/>
         <image name="bottom_bar_bg.png" width="320" height="81"/>
         <image name="bottom_bar_overlay.png" width="320" height="81"/>
-        <image name="close_btn_nobg.png" width="50" height="50"/>
         <image name="favorite_empty.png" width="104" height="100"/>
         <image name="favorite_filled.png" width="104" height="100"/>
         <image name="first" width="30" height="30"/>
+        <image name="minimize_btn.png" width="64" height="64"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
