--- a/AAAReclamsO/Base.lproj/Main.storyboard
+++ b/AAAReclamsO/Base.lproj/Main.storyboard
@@ -63,33 +63,6 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_bar_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="cPv-b4-pmI" userLabel="markets ImgView">
-                                <rect key="frame" x="0.0" y="478" width="320" height="90"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="SDs-zS-A8H"/>
-                                </constraints>
-                            </imageView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1IV-49-Hvk" userLabel="markets ScrollView">
-                                <rect key="frame" x="0.0" y="480" width="320" height="88"/>
-                                <subviews>
-                                    <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ltw-j1-7ei">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="16j-Ky-PTu"/>
-                                </constraints>
-                            </scrollView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_bar_overlay.png" translatesAutoresizingMaskIntoConstraints="NO" id="o9c-XI-fmy">
-                                <rect key="frame" x="0.0" y="478" width="320" height="90"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="H8X-xK-cHc"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBQ-9U-Cwl" customClass="iCarousel">
                                 <rect key="frame" x="0.0" y="40" width="320" height="440"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -99,6 +72,62 @@
                                 <connections>
                                     <outlet property="dataSource" destination="7zJ-Rv-Ayp" id="SGT-Mc-Apn"/>
                                     <outlet property="delegate" destination="7zJ-Rv-Ayp" id="nis-YX-LBW"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AGx-Nj-mhU" userLabel="marketsscroll">
+                                <rect key="frame" x="0.0" y="480" width="320" height="88"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_bar_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="cPv-b4-pmI" userLabel="markets ImgView">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </imageView>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1IV-49-Hvk" userLabel="markets ScrollView">
+                                        <rect key="frame" x="-20" y="-20" width="320" height="88"/>
+                                        <subviews>
+                                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ltw-j1-7ei">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </scrollView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_bar_overlay.png" translatesAutoresizingMaskIntoConstraints="NO" id="o9c-XI-fmy">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="cPv-b4-pmI" secondAttribute="bottom" id="1Ic-yE-6rB"/>
+                                    <constraint firstItem="1IV-49-Hvk" firstAttribute="top" secondItem="AGx-Nj-mhU" secondAttribute="top" id="AgP-hc-AFM"/>
+                                    <constraint firstItem="o9c-XI-fmy" firstAttribute="top" secondItem="AGx-Nj-mhU" secondAttribute="top" id="Fou-a1-ARL"/>
+                                    <constraint firstAttribute="bottom" secondItem="1IV-49-Hvk" secondAttribute="bottom" id="IM0-LQ-Ueg"/>
+                                    <constraint firstAttribute="bottom" secondItem="o9c-XI-fmy" secondAttribute="bottom" id="TkV-dH-wUR"/>
+                                    <constraint firstItem="cPv-b4-pmI" firstAttribute="top" secondItem="AGx-Nj-mhU" secondAttribute="top" id="VXK-yE-K61"/>
+                                    <constraint firstItem="cPv-b4-pmI" firstAttribute="leading" secondItem="AGx-Nj-mhU" secondAttribute="leading" id="aLI-gw-28w"/>
+                                    <constraint firstAttribute="trailing" secondItem="1IV-49-Hvk" secondAttribute="trailing" id="eGS-7s-HiY"/>
+                                    <constraint firstAttribute="trailing" secondItem="o9c-XI-fmy" secondAttribute="trailing" id="g5Y-Eo-BK9"/>
+                                    <constraint firstItem="1IV-49-Hvk" firstAttribute="leading" secondItem="AGx-Nj-mhU" secondAttribute="leading" id="pdm-P8-JgT"/>
+                                    <constraint firstItem="o9c-XI-fmy" firstAttribute="leading" secondItem="AGx-Nj-mhU" secondAttribute="leading" id="ppE-Ld-jf9"/>
+                                    <constraint firstAttribute="height" constant="88" id="v9D-Cx-ECY"/>
+                                    <constraint firstAttribute="trailing" secondItem="cPv-b4-pmI" secondAttribute="trailing" id="xu3-r0-SDL"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IiU-qH-vpQ" userLabel="selectView">
+                                <rect key="frame" x="145" y="465" width="30" height="30"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="open_edit.png" translatesAutoresizingMaskIntoConstraints="NO" id="OTs-Gh-tq8">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="1hO-7i-4hO"/>
+                                    <constraint firstAttribute="height" constant="30" id="W3h-63-aEP"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="bYy-G0-lnx" appends="YES" id="Oty-kb-arF"/>
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="grI-65-opn" userLabel="Error view">
@@ -163,25 +192,21 @@
                         </subviews>
                         <color key="backgroundColor" red="0.03529411927" green="0.1176470667" blue="0.1647058874" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="1IV-49-Hvk" secondAttribute="trailing" id="14l-XN-1mP"/>
                             <constraint firstAttribute="centerX" secondItem="grI-65-opn" secondAttribute="centerX" id="3DJ-ML-VjK"/>
                             <constraint firstAttribute="trailing" secondItem="VBQ-9U-Cwl" secondAttribute="trailing" id="3kV-tD-6UD"/>
-                            <constraint firstAttribute="bottom" secondItem="1IV-49-Hvk" secondAttribute="bottom" id="4IL-5L-9AO"/>
+                            <constraint firstItem="T6R-v1-bcj" firstAttribute="top" secondItem="VBQ-9U-Cwl" secondAttribute="bottom" constant="88" id="5a3-8b-xkL"/>
                             <constraint firstItem="MOv-vo-MmQ" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="ASb-2L-kJn"/>
                             <constraint firstItem="VBQ-9U-Cwl" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="Ajo-h4-fHy"/>
-                            <constraint firstAttribute="bottom" secondItem="cPv-b4-pmI" secondAttribute="bottom" id="Met-qM-1eu"/>
+                            <constraint firstAttribute="centerX" secondItem="IiU-qH-vpQ" secondAttribute="centerX" id="DOX-md-Jub"/>
                             <constraint firstAttribute="trailing" secondItem="MOv-vo-MmQ" secondAttribute="trailing" id="OEr-fV-Qec"/>
                             <constraint firstAttribute="bottom" secondItem="MOv-vo-MmQ" secondAttribute="bottom" id="Oe2-VQ-OiW"/>
                             <constraint firstAttribute="centerY" secondItem="grI-65-opn" secondAttribute="centerY" id="PoA-O4-Xll"/>
-                            <constraint firstItem="1IV-49-Hvk" firstAttribute="top" secondItem="VBQ-9U-Cwl" secondAttribute="bottom" id="SB3-vY-fJz"/>
-                            <constraint firstItem="cPv-b4-pmI" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="bH3-1l-Rod"/>
-                            <constraint firstItem="o9c-XI-fmy" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="dhG-k2-o03"/>
-                            <constraint firstAttribute="bottom" secondItem="o9c-XI-fmy" secondAttribute="bottom" id="fMj-D5-uBV"/>
+                            <constraint firstItem="T6R-v1-bcj" firstAttribute="top" secondItem="AGx-Nj-mhU" secondAttribute="bottom" id="STK-bc-rYt"/>
                             <constraint firstItem="MOv-vo-MmQ" firstAttribute="top" secondItem="Sa3-S0-tZS" secondAttribute="top" id="jIP-ir-ozb"/>
-                            <constraint firstAttribute="trailing" secondItem="cPv-b4-pmI" secondAttribute="trailing" id="jab-Wp-7yZ"/>
+                            <constraint firstItem="AGx-Nj-mhU" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="jgA-7r-SMA"/>
                             <constraint firstItem="grI-65-opn" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" constant="10" id="qOT-dz-GEN"/>
-                            <constraint firstAttribute="trailing" secondItem="o9c-XI-fmy" secondAttribute="trailing" id="voB-0U-meC"/>
-                            <constraint firstItem="1IV-49-Hvk" firstAttribute="leading" secondItem="Sa3-S0-tZS" secondAttribute="leading" id="woK-CL-pro"/>
+                            <constraint firstItem="AGx-Nj-mhU" firstAttribute="top" secondItem="IiU-qH-vpQ" secondAttribute="bottom" constant="-15" id="t9M-rN-aoc"/>
+                            <constraint firstAttribute="trailing" secondItem="AGx-Nj-mhU" secondAttribute="trailing" id="yPU-Zw-EQN"/>
                             <constraint firstItem="VBQ-9U-Cwl" firstAttribute="top" secondItem="JhD-bm-KuR" secondAttribute="bottom" constant="20" id="zLh-Yy-Bkp"/>
                         </constraints>
                     </view>
@@ -194,10 +219,16 @@
                         <outlet property="errorViewSpinner" destination="7aB-FQ-lv0" id="1jQ-Oj-Kwa"/>
                         <outlet property="loadingView" destination="h6O-Se-vnM" id="eVv-eH-1tC"/>
                         <outlet property="marketsScrollView" destination="1IV-49-Hvk" id="9HP-L5-lbO"/>
+                        <outlet property="marketsViewHeightConstraint" destination="v9D-Cx-ECY" id="Cav-et-LAl"/>
                         <outlet property="topBar" destination="M2j-Gx-z10" id="0b4-7Z-xlD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzr-UZ-Jrx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="bYy-G0-lnx">
+                    <connections>
+                        <action selector="editViewDrag:" destination="7zJ-Rv-Ayp" id="hoe-Cy-nET"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="617" y="-348"/>
         </scene>
@@ -726,6 +757,7 @@
         <image name="lock.png" width="44" height="58"/>
         <image name="lock_highlight.png" width="44" height="58"/>
         <image name="minimize.png" width="64" height="62"/>
+        <image name="open_edit.png" width="128" height="128"/>
         <image name="refresh.png" width="128" height="128"/>
         <image name="refresh_highlight.png" width="128" height="128"/>
         <image name="swipe_left_right.png" width="128" height="128"/>
